Fixes the spacing and adds some styling with JS

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,23 +10,23 @@ body {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   user-select: none;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
 }
 
 #quote-label {
+  display: inline-block;
   margin: 0 auto;
   margin-top: 40vh;
   margin-left: 50vw;
   transform: translate(-50%, -50%);
-  background-color: blue;
 }
 
 #author-label {
+  display: inline-block;
   margin: 0 auto;
-  margin-top: 10px;
 }
 
 #social-label {
